atmos-2019: add sponsor button to landing page and fix buttons layout issue on smaller desktops css

--- a/public/static/atmos-19/css/main.css
+++ b/public/static/atmos-19/css/main.css
@@ -22,7 +22,7 @@ a.wrapper-div {
     width: 100%;
     min-height: 100vh;
     color: #EFE2D8;
-    background: brown;
+    background: rgb(37, 18, 14);
 }
 
 .landing {
@@ -88,15 +88,25 @@ button {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     margin: 0 auto;
+    margin-right: 10px;
     margin-bottom: 10px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     text-decoration: none;
-    display: block;
+}
+
+.sponsor-column {
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+.sponsor-button {
+    margin-top: 50px;
 }
 
 .landing-buttons {
-    position: absolute;
-    bottom: 30px;
+    margin-top: 30px;
+    /* position: absolute;
+    bottom: 30px; */
 }
 
 .landing-button:hover {
@@ -334,9 +344,9 @@ span.orange {
     }
     .landing-buttons {
         width: 100%;
-        position: absolute;
+        /* position: absolute;
         left: 0px;
-        bottom: 50px;
+        bottom: 50px; */
         text-align: center;
     }
     .landing-buttons a {
@@ -358,6 +368,10 @@ span.orange {
 /****** ABOUT US DESKTOP ******/
 
 @media only screen and (min-width:1200px) {
+    .landing-buttons {
+        position: initial;
+        margin-top: 80px;
+    }
     .about-us-page {
         background-image: url('../img/texture-about-us.png');
         color: #000000;
@@ -422,8 +436,6 @@ span.orange {
         font-family: 'Montserrat', 'Helvetica', 'Arial', sans-serif !important;
     }
 }
-
-/* Smaller Desktop */
 
 @media only screen and (min-width:992px and max-width:1024px) {
     .about-us-page {
